changing text at bottom back

--- a/index_fromcartivoice.html
+++ b/index_fromcartivoice.html
@@ -283,7 +283,7 @@ function cartify() {
 </div>
 
 <footer class="footer">
-carti voice
+playboi carti text generator
 <br>by @LScorrcho & @chrisorzel (2019)
 <br><br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./textgenimg/tblogo_bling_1000_8.png" height="65px"></a>
 </footer>
