--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -100,6 +100,7 @@ img {
 <br> ^ this would be a mockup screenshot
 <br><br>the playboi carti text generator is now available on the app store.
 <br> with new symbols, beginnings and endings, as well as the ability to copy to clipboard
+<br> - tell a friend * 🦋🦋
 </div>
 
 <div id="linktoappstore">
