--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -95,7 +95,7 @@ img {
 </div>
 
 <div id="appstore">
-<h1> download carti voice for iOS </h1>
+<h1> download carti voice for iOS +* ok ! 🖤</h1>
 <br><img src="./img/iosmockup.png" alt="screenshot of cartivoice" height="300px" >
 <br> ^ this would be a mockup screenshot
 <br><br>the playboi carti text generator is now available on the app store.
