--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -38,6 +38,8 @@ body, footer, textarea {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    	font-weight: 300;
    	color: #ffffff;
+   	margin-left: 50px;
+   	margin-right: 50px;
 }
 
 h1 {
