cleaning up index a beet

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
       height: 100%;
       display: grid;
     }
-    span { /* thing to center */
+    span {
       margin: auto;
+    }
 </style>
 </head>
 <body>
     <span>
         <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“it is traumatic to be born and have to live” -<a href="https://twitter.com/lucydacus?ref_src=twsrc%5Etfw">@lucydacus</a></p>&mdash; Julien Baker (@julienrbaker) <a href="https://twitter.com/julienrbaker/status/1082128199348375552?ref_src=twsrc%5Etfw">January 7, 2019</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
     </span>
 </body>
 </html>
