--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-
-  <div id="root"></div>
+  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
+  <div id="soundboard"></div>
+  <div class="footer"></div>
   <script src="js/index.js"></script>
   </body>
 
