--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" >
+
+<!-- 
+this show rules - a time crisis soundboard
+by @LScorrcho (2019)
+
+we took a vow in summertime 
+now we find ourselves in late december
+-->
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>THIS SHOW RULES - Time Crisis Soundboard</title>
+  <meta name="author" content="@LScorrcho">
+  <meta name="description" content="Signature catchphrases from your favorite rappers">
+  <title>This Show Rules - Time Crisis Soundboard</title>
   
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
@@ -17,7 +27,7 @@
 <body>
   <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
   <div id="soundboard"></div>
-  <div class="footer"></div>
+  <div class="footerdiv">BY LANCE ENCARNADO (@LSCORRCHO) I'LL ADD SOME STUFF ABOUT THIS BEING INSPIRED BY EZRA / JAKE ETC. LATER.</div>
   <script src="js/index.js"></script>
   </body>
 
