--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -27,7 +27,7 @@ now we find ourselves in late december
 <body>
   <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
   <div id="soundboard"></div>
-  <div class="footerdiv">BY LANCE ENCARNADO (@LSCORRCHO) I'LL ADD SOME STUFF ABOUT THIS BEING INSPIRED BY EZRA / JAKE ETC. LATER.</div>
+  <div class="footerdiv">BY LANCE ENCARNADO (@LSCORRCHO) FINISH FOOTER LATER.</div>
   <script src="js/index.js"></script>
   </body>
 
