--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -13,7 +13,7 @@ now we find ourselves in late december
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="@LScorrcho">
-  <meta name="description" content="Signature catchphrases from your favorite rappers">
+  <meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
   <title>This Show Rules - Time Crisis Soundboard</title>
   
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
@@ -25,10 +25,12 @@ now we find ourselves in late december
 </head>
 
 <body>
-  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
-  <div id="soundboard"></div>
-  <div class="footerdiv">BY LANCE ENCARNADO (@LSCORRCHO) FINISH FOOTER LATER.</div>
-  <script src="js/index.js"></script>
-  </body>
+  <div class="borderdiv">
+	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
+	  <div id="soundboard"></div>
+	  <div class="footerdiv">BY LANCE ENCARNADO (@LSCORRCHO) FINISH FOOTER LATER.</div>
+	  <script src="js/index.js"></script>
+  </div>
+</body>
 
 </html>
