--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -11,9 +11,9 @@ now we find ourselves in late december
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="@LScorrcho">
   <meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>This Show Rules - Time Crisis Soundboard</title>
   
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
@@ -28,7 +28,10 @@ now we find ourselves in late december
   <div class="borderdiv">
 	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
 	  <div id="soundboard"></div>
-	  <div class="footerdiv">BY LANCE ENCARNADO (@LSCORRCHO) FINISH FOOTER LATER.</div>
+	  <div class="footerdiv">
+	  	BY LANCE ENCARNADO (<a href="https://twitter.com/LScorrcho">@LSCORRCHO</a>)
+	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
+	  </div>
 	  <script src="js/index.js"></script>
   </div>
 </body>
