applandingmockup mobile fixes

--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -73,8 +73,13 @@ body, footer, textarea {
   	}
 }
 
+/* resizing images for mobile */
 @media only screen and (max-width:768px)  {
 	#appstorelinkimg {
+		width: 150px;
+	}
+	
+	#tblogo_img {
 		width: 150px;
 	}
 }
@@ -89,6 +94,7 @@ img {
 }
 
 #tblogo {
+	padding-top: 25px;
 	padding-bottom: 15px;
 	font-size: 14px;
 }
@@ -129,7 +135,7 @@ img {
 
 <div id="tblogo">
 playboi carti text generator
-<br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./img/tblogo.png" height="65px"></a>
+<br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./img/tblogo.png" width="250px"></a>
 </div>
 
 </div>
