--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -127,7 +127,7 @@ img {
 <div id="apptext">
 	<br>• Bug fixes and performance improvements!
 	<br>• More Carti-isms!
-	<br>• Optimized for Mobile use!
+	<br>• Optimized for mobile use!
 	<br>• Text like Carti *^!
 </div>
 <br><img src="./img/iosmockup.png" alt="Screenshot of Carti Voice" width="1400px" >
