--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -130,13 +130,12 @@ img {
 	<br>• Optimized for mobile use!
 	<br>• Text like Carti *^!
 </div>
-<br><img src="./img/iosmockup.png" alt="Screenshot of Carti Voice" width="1400px" >
+<br><img src="./img/iosmockup.png" alt="Screenshot of Carti Voice" width="1100px" >
 </div>
 
 <div id="tblogo">
 playboi carti text generator
-<br><br> Powered By
-<br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./img/tblogo.png" width="250px"></a>
+<br><br><br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./img/tblogo.png" width="250px"></a>
 </div>
 
 </div>
