--- a/applandingmockup/index.html
+++ b/applandingmockup/index.html
@@ -135,7 +135,7 @@ img {
 
 <div id="tblogo">
 playboi carti text generator
-<br><br><br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./img/tblogo.png" width="250px"></a>
+<br><br><br><a href="https://tacklebox.company/" target="_blank"><img id="tblogo_img" alt="Tacklebox" src="./img/poweredbytblogo.png" width="250px"></a>
 </div>
 
 </div>
