--- a/ntuitivenewmay/game_iframeversion_mobile.html
+++ b/ntuitivenewmay/game_iframeversion_mobile.html
@@ -170,7 +170,7 @@ function resetPositions() {
     var originLeft =  widthMidpoint - 177 - 5;
     
     var heightMidpoint = $( "#playground" ).height() / 2;
-    var originTop = heightMidpoint - 209 + 116; // height of full obj is 335
+    var originTop = heightMidpoint - 209 - 116; // height of full obj is 335
     
     $( "#12_yellow_asset15" ).offset({ left: originLeft + (574 - yellowLeft), top: originTop + (359 - yellowTop) });
     $( "#14_yellow_asset8" ).offset({ left: originLeft, top: originTop });
