--- a/ntuitivenewmay/game_iframeversion_mobile.html
+++ b/ntuitivenewmay/game_iframeversion_mobile.html
@@ -56,11 +56,27 @@ html,body {
   opacity: 0.5;
 }
 
+.ui-widget-header {
+	background: transparent;
+	border-style: none;
+}
+
+.ui-dialog .ui-dialog-titlebar {
+	padding: 0px;
+}
+
+p {
+    margin-block-start: 0.2em;
+    margin-block-end: 0.2em;
+    text-align: center;
+}
+
+
 </style>
 </head>
 <body>
 
-<div id="dialog" title="How to play">
+<div id="dialog">
   <p>Hold and drag the blocks to your own understanding.</p>
 </div>
 
@@ -68,7 +84,8 @@ html,body {
 // this makes the dialog div a dialog
 $( function() {
 	$( "#dialog" ).dialog({
-		dialogClass: "no-titlebar"
+		height: 85,
+		position: { my: "center", at: "center", of: window }
 	});
 } );
 </script>
