--- a/thelondon_design/index.html
+++ b/thelondon_design/index.html
@@ -50,7 +50,7 @@ if (screen.width <= 699) {
 		<input type="file" id="selectedFace" class="uploadface-btn" name="file_photo" style="display: none;" />
 		<!-- <input type="button" class="button" value="UPLOAD FACE" onclick="document.getElementById('selectedFace').click();" /> -->
 		<a href="#" class="custombutton" onclick="document.getElementById('selectedFace').click();return false;">UPLOAD FACE</a>
-		<p><a href="#" class="custombutton" onclick="document.getElementById('selectedFace').click();return false;">SAVE IMAGE</a>
+		<a href="#" class="custombutton" onclick="document.getElementById('selectedFace').click();return false;">SAVE IMAGE</a>
 </div>
 
 <!-- 
