--- a/thelondon_design/mobile.html
+++ b/thelondon_design/mobile.html
@@ -46,11 +46,21 @@ coded by @LScorrcho (2019)
 </div>
 
 <div class="streaming">
-	<img class="streamingimg" id="spotify" src="images/dsp_logos/spotify.png" alt="Listen on Apple Music">
-	<img class="streamingimg" id="apple" src="images/dsp_logos/apple.png" alt="Listen on Apple Music">
-	<br><img class="streamingimg" id="tidal" src="images/dsp_logos/tidal.png" alt="Listen on Tidal">
-	<img class="streamingimg" id="apple" src="images/dsp_logos/youtube.png" alt="Listen on YouTube">
-	<br><img class="streamingimg" id="soundcloud" src="images/dsp_logos/soundcloud.png" alt="Listen on Soundcloud">
+	<a href="https://open.spotify.com/album/6p9Y1K9yu3ojyS8fBJXUnp" class="streaminglink" target="_blank">
+		<img class="streamingimg" id="spotify" src="images/dsp_logos/spotify.png" alt="Listen on Apple Music">
+	</a>
+	<a href="https://music.apple.com/us/album/the-london-feat-j-cole-travis-scott-single/1465154493?app=music&at=1001lwQy" class="streaminglink" target="_blank">
+		<img class="streamingimg" id="apple" src="images/dsp_logos/apple.png" alt="Listen on Apple Music">
+	</a>
+	<br><a href="http://www.tidal.com/album/109905247" class="streaminglink" target="_blank">
+		<img class="streamingimg" id="tidal" src="images/dsp_logos/tidal.png" alt="Listen on Tidal">
+	</a>
+	<a href="https://www.youtube.com/watch?v=OKhT_6XtD7I" class="streaminglink" target="_blank">
+		<img class="streamingimg" id="apple" src="images/dsp_logos/youtube.png" alt="Listen on YouTube">
+	</a>
+	<br><a href="https://soundcloud.com/youngthugworld/the-london/s-UkTTK" class="streaminglink" target="_blank">
+		<img class="streamingimg" id="soundcloud" src="images/dsp_logos/soundcloud.png" alt="Listen on Soundcloud">
+	</a>
 </div>
 
 <div id="tbfooter">
