--- a/thelondon_design/index.html
+++ b/thelondon_design/index.html
@@ -15,7 +15,7 @@ coded by @LScorrcho (2019)
 
 <head>
 <meta charset="UTF-8">
-<title>Meet Me At The London</title>
+<title>#MeetMeAtTheLondon</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel='stylesheet' href='js/croppie.css'>
 <link rel="stylesheet" href="css/style.css">
