--- a/cartitext.html
+++ b/cartitext.html
@@ -275,10 +275,12 @@ function cartify() {
 </textarea>
 </div>
 
+<!-- start meetmeatthelondon.com ad -->
 <div id="thelondonad">
 <a href="https://www.meetmeatthelondon.com/" target="_blank"><img id="thelondon_img" alt="Meet Me At The London" src="./textgenimg/meetmeatthelondon.png" width="400px"></a>
 <p> Try it now!
 </div>
+<!-- end meetmeatthelondon.com ad -->
 
 <div class="push"></div>
 </div>
