css is nice on mobile now

--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -24,7 +24,7 @@ now we find ourselves in late december
   
 </head>
 
-<body>
+<body ontouchstart="">
   <div class="borderdiv">
 	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
 	  <div id="soundboard"></div>
