differentiating between quotes and drops visually

--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -10,30 +10,33 @@ now we find ourselves in late december
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="author" content="@LScorrcho">
-  <meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>This Show Rules - Time Crisis Soundboard</title>
-  
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-  <link rel="stylesheet" href="css/style.css">
-  
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
+	<meta charset="UTF-8">
+	<meta name="author" content="@LScorrcho">
+	<meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>This Show Rules - Time Crisis Soundboard</title>
+
+	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+	<link rel="stylesheet" href="css/style.css">
+
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
   
 </head>
 
 <body ontouchstart="">
-  <div class="borderdiv">
-	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
-	  <div id="soundboard"></div>
-	  <div class="footerdiv">
-	  	SITE BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a> (2019)
-	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
-	  </div>
-	  <script src="js/index.js"></script>
-  </div>
+	<div class="borderdiv">
+		<div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
+	  	<div class="legend">
+	  		<span class="legend-quote">&#9635 = QUOTE</span> <span class="legend-drop">&#9635 = DROP</span>
+	  	</div>
+	  	<div id="soundboard"></div>
+	  	<div class="footerdiv">
+	  		SITE BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a> (2019)
+	  		<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
+	  	</div>
+		<script src="js/index.js"></script>
+	</div>
 </body>
 
 </html>
