--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -4,9 +4,9 @@
 this show rules - a time crisis soundboard
 by @LScorrcho (2019)
 
-we took a vow in summertime 
-now we find ourselves in late december
+your dad took the bread and he like, absconded man
 -->
+
 <html lang="en">
 
 <head>
