--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -29,7 +29,8 @@ your dad took the bread and he like, absconded man
 	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
 	  <div id="soundboard"></div>
 	  <div class="footerdiv">
-	  	SITE BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a> (2019)
+	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD
+	  	<br>SITE BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a> (2019)
 	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
 	  </div>
 	  <script src="js/index.js"></script>
