--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -21,6 +21,7 @@ your dad took the bread and he like, absconded man
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js'></script>
   
 </head>
 
