--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -19,9 +19,9 @@ your dad took the bread and he like, absconded man
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
   
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js'></script>
   
 </head>
 
