--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -19,7 +19,7 @@ your dad took the bread and he like, absconded man
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
   
-  <script src="http://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.includes"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
   
@@ -30,7 +30,7 @@ your dad took the bread and he like, absconded man
 	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
 	  <div id="soundboard"></div>
 	  <div class="footerdiv">
-	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD test
+	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD test2
 	  	<br>SITE BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a> (2019)
 	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
 	  </div>
