--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -19,8 +19,6 @@ your dad took the bread and he like, absconded man
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.5/es6-shim.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
   
@@ -31,7 +29,7 @@ your dad took the bread and he like, absconded man
 	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
 	  <div id="soundboard"></div>
 	  <div class="footerdiv">
-	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD test3
+	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD
 	  	<br>SITE BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a> (2019)
 	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
 	  </div>
