a cool fallback font.

--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -17,8 +17,9 @@ your dad took the bread and he like, absconded man
   <title>This Show Rules - Time Crisis Soundboard</title>
   
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
   
