--- a/cartitext.html
+++ b/cartitext.html
@@ -110,11 +110,22 @@ h1 {
 	line-height: 1.4;
 }
 
-#thelondonad {
+/* begin hoodbaby ad properties */
+#hoodbabyad {
 	padding-top: 50px;
 	padding-bottom: 20px;
 	font-size: 20px;
 }
+
+#hoodbaby_logo {
+	padding-top: 25px;
+}
+
+#download_appstore {
+	padding-top: 30px;
+}
+
+/* end hoodbaby ad properties */
 
 
 </style>
@@ -250,7 +261,7 @@ function cartify() {
 <div class="wrapper">
 
 <div id="logo">
-<img src="./textgenimg/textgenlogo_bling_1200_8.png" alt="Playboi Carti Text Generator" width="625px" >
+<img src="./textgenimg/cartivoice.png" alt="Carti Text Generator" width="625px" >
 </div>
 
 <br>
@@ -275,12 +286,13 @@ function cartify() {
 </textarea>
 </div>
 
-<!-- start meetmeatthelondon.com ad -->
-<div id="thelondonad">
-<a href="https://www.meetmeatthelondon.com/" target="_blank"><img id="thelondon_img" alt="Meet Me At The London" src="./textgenimg/meetmeatthelondon.png" width="400px"></a>
-<p> Try it now!
+<!-- start hoodbaby surf ad -->
+<div id="hoodbabyad">
+Try it now
+<p><a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552?ls=1" target="_blank"><img id="hoodbaby_logo" alt="#HoodBaby Surf" src="./textgenimg/hoodbaby_logo.png" width="350px"></a>
+<p><a href="https://apps.apple.com/us/app/hoodbabysurf/id1469347552?ls=1" target="_blank"><img id="download_appstore" alt="Download #HoodBaby Surf on the App Store" src="./textgenimg/download_appstore.png" width="140px"></a>
 </div>
-<!-- end meetmeatthelondon.com ad -->
+<!-- end hoodbaby surf ad -->
 
 <div class="push"></div>
 </div>
