tc soundboard: new sounds

--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- 
+<!--
 this show rules - a time crisis soundboard
 by @LScorrcho (2019)
 
@@ -15,14 +15,14 @@ your dad took the bread and he like, absconded man
   <meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>This Show Rules - Time Crisis Soundboard</title>
-  
+
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
-  
+
 </head>
 
 <body ontouchstart="">
@@ -32,6 +32,7 @@ your dad took the bread and he like, absconded man
 	  <div class="footerdiv">
 	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD // BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a>
 	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
+	  	<br><br>THISSHOWRULES.COM IS A POPCORN AND RAISINS-FREE ZONE.
 	  </div>
 	  <script src="js/index.js"></script>
   </div>
