--- a/numa/mobile/meet-numa/meet-numa.html
+++ b/numa/mobile/meet-numa/meet-numa.html
@@ -87,7 +87,7 @@ function handleComplete(evt,comp) {
 			stage.tickOnUpdate = true;		
 		}
 	}
-	makeResponsive(true,'both',true,1);	
+	makeResponsive(true,'width',true,2);	
 	AdobeAn.compositionLoaded(lib.properties.id);
 	fnStartAnimation();
 }
