--- a/tcsoundboard/index.html
+++ b/tcsoundboard/index.html
@@ -10,32 +10,43 @@ your dad took the bread and he like, absconded man
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="author" content="@LScorrcho">
-  <meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>This Show Rules - Time Crisis Soundboard</title>
+	<meta charset="UTF-8">
+	<meta name="author" content="@LScorrcho">
+	<meta name="description" content="A soundboard with clips from the hit internet radio show Time Crisis with Ezra Koenig on Beats 1.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>This Show Rules - Time Crisis Soundboard</title>
 
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
 
 </head>
 
 <body ontouchstart="">
-  <div class="borderdiv">
-	  <div class="logodiv"><img class="logoimg" src="assets/logo.png" alt="This Show Rules - Time Crisis Soundboard"></div>
-	  <div id="soundboard"></div>
-	  <div class="footerdiv">
-	  	THIS SHOW RULES - A TIME CRISIS SOUNDBOARD // BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a>
-	  	<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
-	  	<br><br>THISSHOWRULES.COM IS A POPCORN AND RAISINS-FREE ZONE.
-	  </div>
-	  <script src="js/index.js?rnd=215"></script>
-  </div>
+	<div class="borderdiv">
+		<div class="logodiv"><img class="logoimg" src="assets/logo_masks2.png" alt="This Show Rules - Time Crisis Soundboard"></div>
+		<div class="stickercontainer">
+			<div class="stickerinfo">
+				LIMITED TIME DROP: "TIME CRISIS BLESS" STICKER
+				<p><a href="https://www.redbubble.com/i/sticker/Time-Crisis-Bless-by-lscorrcho/49352344.EJUG5"><img src="assets/sticker.png" class="stickerimg" alt="Time Crisis sticker"></a>
+				<p>PERFECT FOR FANS OF INTERNET RADIO SHOWS AND EMULSIFIED BEEF PRODUCTS
+				<p>ALL PROFITS WILL BE DONATED TO <a href="https://twitter.com/BlackVisionsMN">BLACK VISIONS COLLECTIVE</a> AND OTHER BLACK-LED
+				ORGANIZATIONS AS NEEDED
+				<p><a href="https://www.redbubble.com/i/sticker/Time-Crisis-Bless-by-lscorrcho/49352344.EJUG5">CLICK HERE (OR ON THE STICKER) TO PURCHASE</a>
+				<p>BLACK LIVES MATTER
+			</div>
+		</div>
+		<div id="soundboard"></div>
+		<div class="footerdiv">
+			THIS SHOW RULES - A TIME CRISIS SOUNDBOARD // BY <a href="https://twitter.com/LScorrcho">@LSCORRCHO</a>
+			<br>ALL SOUNDBITES ARE FROM THE HIT INTERNET RADIO SHOW <a href="https://en.wikipedia.org/wiki/Time_Crisis_with_Ezra_Koenig">TIME CRISIS WITH EZRA KOENIG</a>  ON BEATS 1.
+			<br><br>THISSHOWRULES.COM IS A POPCORN AND RAISINS-FREE ZONE.
+		</div>
+		<script src="js/index.js?rnd=215"></script>
+	</div>
 </body>
 
 </html>
