--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=3836835108" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=509910167" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#cubpupcontainer {  margin: auto;  text-align: center;  height: 500px;}</style>
+  <style>#cubpupcontainer {  margin: auto;  text-align: center;}</style>
   <!--/*
 
 */
@@ -55,10 +55,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
     </div>
+    <!-- m_editable region-id="editable-static-tag-U1711-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u1711-4" data-muse-uid="U1711" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p><span id="u1711">Cub and Pup</span></p>
+    </div>
+    <!-- /m_editable -->
     <div class="browser_width colelem" id="u1665-bw">
      <div id="u1665"><!-- custom html -->
       <div id="cubpupcontainer">
-<iframe id="cubpupiframe" src="https://lanceencarnado.github.io/gk/cubpup/" width="90%" height="500"></iframe>
+<iframe id="cubpupiframe" src="../cubpup/index.html" width="90%" height="500"></iframe>
+</div>
+     </div>
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U1714-BP_infinity" template="phone/games.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix colelem" id="u1714-4" data-muse-uid="U1714" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p><span id="u1714">Puzzle</span></p>
+    </div>
+    <!-- /m_editable -->
+    <div class="browser_width colelem" id="u1693-bw">
+     <div id="u1693"><!-- custom html -->
+      <div id="puzzlecontainer">
+<iframe id="puzzleiframe" src="../puzzle_responsive/index.html" width="99%" height="350"></iframe>
 </div>
      </div>
     </div>
@@ -69,7 +86,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="museBGSize colelem" id="u1655"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="1340" data-content-above-spacer="1339" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="1322" data-content-above-spacer="1322" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -91,7 +108,7 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u1646').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u1646').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
+$('#u1646').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":25,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
