mobile version of puzzle

--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -20,7 +20,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/games.css?crc=509910167" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#cubpupcontainer {  margin: auto;  text-align: center;}</style>
+  <style>#cubpupcontainer {  margin: auto;  text-align: center;  }</style>
   <!--/*
 
 */
@@ -75,7 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1693-bw">
      <div id="u1693"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="../puzzle_responsive/index.html" width="99%" height="350"></iframe>
+<iframe id="puzzleiframe" src="../puzzle_responsive/index.html" width="370" height="350"></iframe>
 </div>
      </div>
     </div>
