--- a/gk/phone/games.html
+++ b/gk/phone/games.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Games</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/games.css?crc=509910167" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/games.css?crc=4000386329" id="pagesheet"/>
     <!--custom head HTML-->
-  <style>#cubpupcontainer {  margin: auto;  text-align: center;  }</style>
+  <style>#cubpupcontainer {  margin: auto;  text-align: center;}</style><style>#puzzlecontainer {  margin: auto;  text-align: center;}</style>
   <!--/*
 
 */
@@ -75,7 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width colelem" id="u1693-bw">
      <div id="u1693"><!-- custom html -->
       <div id="puzzlecontainer">
-<iframe id="puzzleiframe" src="../puzzle_responsive/index.html" width="370" height="350"></iframe>
+<iframe id="puzzleiframe" src="../puzzle_mobile/index.html" width="95%" height="300"></iframe>
 </div>
      </div>
     </div>
@@ -86,7 +86,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="museBGSize colelem" id="u1655"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="1322" data-content-above-spacer="1322" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="1330" data-content-above-spacer="1330" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -107,8 +107,8 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u1646').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u1646').registerOpacityScrollEffect([{"fade":0,"in":[-Infinity,0],"opacity":0},{"opacity":0,"in":[0,0]},{"fade":25,"in":[0,Infinity],"opacity":100}]);/* scroll effect */
+$('#u1646').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u1646').registerOpacityScrollEffect([{"in":[-Infinity,0],"fade":0,"opacity":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"fade":25,"opacity":100}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
